--- a/src/client/storage/index.html
+++ b/src/client/storage/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_1227159_mcpkxuvy9ze.css">
-  <title>index</title>
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1395188_8h5gonmaba3.css">
+  <title>智能存储柜</title>
 </head>
 
 <body>
