--- a/src/client/storage-h5/index.html
+++ b/src/client/storage-h5/index.html
@@ -9,7 +9,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta content="no" name="apple-mobile-web-app-capable">
   <meta name="format-detection" content="telephone=no" />
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_1189661_iiuyjmjmexj.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_1189661_iiuyjmjmexj.css">
+  <script src="https://g.alicdn.com/dingding/dingtalk-jsapi/2.7.13/dingtalk.open.js"></script>
+  <script type = "text/javascript" src = "https://webapi.amap.com/maps?v=1.4.15&key=a4df1b5a57b9ba3e9be795464b7009ac"></script>
   <title>智能存储柜</title>
 </head>
 
